# openapi.yaml
@@ -5,6 +5,8 @@ info:
 paths:
   /tasks:
     get:
+      tags:
+        - tasks
       operationId: listTasks
       summary: List tasks
       responses:
@@ -21,6 +23,8 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
     post:
+      tags:
+        - tasks
       operationId: createTask
       summary: Create task
       requestBody:
@@ -57,6 +61,8 @@ paths:
           type: integer
           minimum: 1
     patch:
+      tags:
+        - tasks
       operationId: patchTask
       summary: Patch task by id
       requestBody:
@@ -91,8 +97,123 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
     delete:
+      tags:
+        - tasks
       operationId: deleteTask
       summary: Delete task by id
+      responses:
+        "204":
+          description: Deleted
+        "404":
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
+          description: Internal error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+  /users:
+    get:
+      tags:
+        - users
+      operationId: GetUsers
+      summary: List users
+      responses:
+        "200":
+          description: Users list
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ListUsersResponse"
+        "500":
+          description: Internal error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+    post:
+      tags:
+        - users
+      operationId: PostUser
+      summary: Create user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CreateUserRequest"
+      responses:
+        "201":
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/CreateUserResponse"
+        "400":
+          description: Invalid input
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
+          description: Internal error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+  /users/{id}:
+    parameters:
+      - in: path
+        name: id
+        required: true
+        schema:
+          type: integer
+          minimum: 1
+    patch:
+      tags:
+        - users
+      operationId: PatchUserByID
+      summary: Patch user by id
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/PatchUserRequest"
+      responses:
+        "200":
+          description: Updated
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/PatchUserResponse"
+        "400":
+          description: Invalid input
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "404":
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
+          description: Internal error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+    delete:
+      tags:
+        - users
+      operationId: DeleteUserByID
+      summary: Delete user by id
       responses:
         "204":
           description: Deleted
@@ -150,6 +271,54 @@ components:
       type: array
       items:
         $ref: "#/components/schemas/Task"
+    User:
+      type: object
+      required:
+        - id
+        - email
+        - password
+        - created_at
+        - updated_at
+      properties:
+        id:
+          type: integer
+          format: int64
+          minimum: 1
+        email:
+          type: string
+        password:
+          type: string
+        created_at:
+          type: string
+          format: date-time
+        updated_at:
+          type: string
+          format: date-time
+    CreateUserRequest:
+      type: object
+      required:
+        - email
+        - password
+      properties:
+        email:
+          type: string
+        password:
+          type: string
+    PatchUserRequest:
+      type: object
+      properties:
+        email:
+          type: string
+        password:
+          type: string
+    CreateUserResponse:
+      $ref: "#/components/schemas/User"
+    PatchUserResponse:
+      $ref: "#/components/schemas/User"
+    ListUsersResponse:
+      type: array
+      items:
+        $ref: "#/components/schemas/User"
     ErrorResponse:
       type: object
       required:
